--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.8",
     "emailjs": "^4.0.3",
+    "framer-motion": "^12.16.0",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-responsive": "^10.0.1",
     "tailwindcss": "^4.1.8",
     "three": "^0.177.0"
